0.491 2023-09-13
  [New Features]
    * The following methods in the Sys class are added.
    
      + static method say : int ($stream : Sys::IO::FileStream, $string : string);
0.490 2023-09-11
  [Bug Fix]
    * Fix a bug that the fcntl method in the Sys::IO class does not work well.
0.489 2023-09-11
  [New Features]
    * The following methods in the Sys class are added.
    
      + static method fcntl : int ($fd : int, $command : int, $command_arg : object of Int|Sys::IO::Flock|object = undef);
  [Bug Fix]
    * Fix a bug that the fcntl method in the Sys::IO class does not work well.
0.488 2023-09-11
  [Prerequirement Changes]
    * Require SPVM 0.989041.
    
0.487 2023-09-08
  [New Features]
    * The following methods in the Sys class are added.
    
      + static method truncate : int ($fd : int, $legnth : long);
      + static method sysread : int ($fd : int, $buf : mutable string, $count : int, $buf_offset : int = 0);
      + static method syswrite : int ($fd : int, $buf : string, $count : int = -1, $buf_offset : int = 0);
      + static method read : int ($stream : Sys::IO::FileStream, $buf : mutable string, $count : int, $buf_offset : int = 0);
      + static method fileno : int ($stream : Sys::IO::Stream);
      + static method eof : int ($stream : Sys::IO::Stream);
      + static method readline : mutable string ($stream : Sys::IO::FileStream);
      + static method getc : int ($stream : Sys::IO::FileStream);
      + static method flock : int ($fd : int, $operation : int);
      + static method print : int ($stream : Sys::IO::FileStream, $string : string);
      + static method printf : int ($stream, $format : string, $args : object[]);
      + static method read : int ($stream : Sys::IO::FileStream, $buf : mutable string, $count : int, $buf_offset : int = 0);
      + static method rewinddir : void ($dirp : Sys::IO::DirStream);
      + static method readdir : Sys::IO::Dirent ($dirp : Sys::IO::DirStream);