@@ -2,7 +2,15 @@
   [New Features]
     * The following methods in the Sys class are added.
     
-      + static method say : int ($stream : Sys::IO::FileStream, $string : string);
+      static method say : int ($stream : Sys::IO::FileStream, $string : string);
+
+      static method STDIN : Sys::IO::FileStream ();
+
+      static method STDOUT : Sys::IO::FileStream ();
+
+      static method STDERR : Sys::IO::FileStream ();
+
+Calls the L<stderr|SPVM::Sys::IO/"stderr"> method in the L<Sys::IO|SPVM::Sys::IO> class.
 0.490 2023-09-11
   [Bug Fix]
     * Fix a bug that the fcntl method in the Sys::IO class does not work well.
